Modification de la gestion des URL en local
La modification consiste à utiliser les adresse à partir de la page
racine pour tous les messages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1> {{.Title}} </h1>
 		<ul>
-			{{range .T_names}}<li><a href="Liste/{{.}}"/>{{.}}</li><br>{{end}}
+			{{range .T_names}}<li><a href="{{.}}"/>{{.}}</li><br>{{end}}
 		</ul>
 	</body> 
 </html>
