Add a link to go back to main menu

--- a/templates/liste.html
+++ b/templates/liste.html
@@ -28,6 +28,7 @@
 	</head>
 	<body>
 		<h1> {{.Title}} </h1>
+		<p id="menu-link"><a href="/">Liens vers le menu</a></p>
 		<h2 onclick="hide('form')"> Editer </h2>
 		<p>
 			<form id="form" method="post" style="display:none;">
