--- a/templates/liste.html
+++ b/templates/liste.html
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="user-scalable=no,width=device-width" />
-		<link rel="stylesheet" href='{{printf "%s/style.css" .Static_dir}}' /> 
+		<link rel="stylesheet" href='/static/css/style.css' /> 
 		<script> 
 			function toggleGray(name){
 				var element = document.getElementById(name).style;
